Modify variable name and set text color

--- a/app/src/main/res/layout/activity_datepicker_dialog_popup.xml
+++ b/app/src/main/res/layout/activity_datepicker_dialog_popup.xml
@@ -9,17 +9,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="3dp"
         android:weightSum="3">
 
         <TextView
             android:id="@+id/date_title_textview"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:descendantFocusability="blocksDescendants"
             android:gravity="center"
-            android:text="Date"
+            android:text="দিন"
             android:textColor="#626262"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -28,11 +31,13 @@
             android:id="@+id/month_title_textview"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:descendantFocusability="blocksDescendants"
             android:gravity="center"
-            android:text="Month"
+            android:text="মাস"
             android:textColor="#626262"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -42,11 +47,13 @@
             android:id="@+id/year_title_textview"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:descendantFocusability="blocksDescendants"
             android:gravity="center"
-            android:text="Year"
+            android:text="সন"
             android:textColor="#626262"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -59,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/Level"
         android:orientation="horizontal"
+        android:layout_marginTop="-12dp"
         android:weightSum="3">
 
         <NumberPicker
