--- a/app/src/main/res/layout/activity_registration_first.xml
+++ b/app/src/main/res/layout/activity_registration_first.xml
@@ -87,6 +87,8 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="ইমেইল"
+                android:textColor="@color/lblFromName"
+                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
                 android:paddingLeft="10sp"
@@ -101,6 +103,8 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="পাসওয়ার্ড (ন্যূনতম ৮ অক্ষর)"
+                android:textColor="@color/lblFromName"
+                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="text"
                 android:privateImeOptions="nm"
@@ -116,6 +120,8 @@
                 android:layout_weight=".7"
                 android:background="@color/white"
                 android:hint="নাম"
+                android:textColor="@color/lblFromName"
+                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionNext"
                 android:inputType="text"
                 android:privateImeOptions="nm"
@@ -131,6 +137,8 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="ডিসপ্লে নাম"
+                android:textColor="@color/lblFromName"
+                android:textColorHint="@color/lblFromName"
                 android:inputType="text"
                 android:paddingLeft="10sp"
                 android:privateImeOptions="nm"
@@ -145,6 +153,8 @@
                 android:layout_weight=".8"
                 android:background="@color/white"
                 android:hint="জন্ম তারিখ"
+                android:textColor="@color/lblFromName"
+                android:textColorHint="@color/lblFromName"
                 android:imeOptions="actionDone"
                 android:inputType="text"
                 android:paddingLeft="10sp"
