--- a/app/src/main/res/layout/activity_registration_user_address_information.xml
+++ b/app/src/main/res/layout/activity_registration_user_address_information.xml
@@ -65,43 +65,157 @@
                 android:id="@+id/village_house_status_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="আপনার দেশের বাড়ি*"
-                android:textColor="@color/colorPrimary"
                 android:layout_margin="10dp"
-                />
+                android:text="আপনার দেশের বাড়ি*"
+                android:textColor="@color/colorPrimary" />
 
             <LinearLayout
                 android:id="@+id/village_house_layout"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="0dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="0dp"
                 android:background="@color/white"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
                 <TextView
                     android:id="@+id/village_house_district_name_text_view"
-                    android:gravity="left"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:text="দেশের বাড়ি"
-                    android:textSize="18dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginLeft="15dp"/>
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="দেশের বাড়ি"
+                    android:textSize="18dp" />
+
                 <ImageView
                     android:id="@+id/down_arrow_merital"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
+                    android:layout_gravity="right"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/down_arrow"
-                    />
+                    android:layout_weight="1"
+                    android:src="@drawable/down_arrow" />
 
             </LinearLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="আপনার বর্তমান অবস্থান*"
+                android:textColor="@color/colorPrimary" />
+
+            <EditText
+                android:id="@+id/present_address_editext"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/white"
+                android:gravity="top"
+                android:hint="বর্তমান ঠিকানা"
+                android:paddingLeft="@dimen/small_padding"
+                android:privateImeOptions="nm" />
+
+            <LinearLayout
+                android:id="@+id/present_country_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/present_country_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="দেশ"
+                    android:textSize="18dp" />
+
+                <ImageView
+                    android:id="@+id/present_country_merital"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/down_arrow" />
+
+            </LinearLayout>
+
+            <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="এটাই স্থায়ী ঠিকানা"/>
+
+
+            <EditText
+                android:id="@+id/permanent_address_editext"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/white"
+                android:gravity="top"
+                android:hint="স্থায়ী ঠিকানা"
+                android:paddingLeft="@dimen/small_padding"
+                android:privateImeOptions="nm" />
+
+            <LinearLayout
+                android:id="@+id/permanent_country_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/permanent_country_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="দেশ"
+                    android:textSize="18dp" />
+
+                <ImageView
+                    android:id="@+id/permanent_country_merital"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/down_arrow" />
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
+                android:text="(আপনার অনুমতি ছাড়া ঠিকানা প্রকাশ করা হবে না)"
+                android:textSize="16sp"
+                android:padding="@dimen/small_padding"
+                />
 
         </LinearLayout>
 
