--- a/app/src/main/res/layout/activity_registration_user_address_information.xml
+++ b/app/src/main/res/layout/activity_registration_user_address_information.xml
@@ -73,6 +73,7 @@
                 android:id="@+id/village_house_layout"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="0dp"
@@ -108,6 +109,87 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:text="আপনার বর্তমান অবস্থান*"
+                android:textColor="@color/colorPrimary" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="horizontal">
+
+                <CheckBox
+                    android:id="@+id/address_bangldesh_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  বাংলাদেশে"
+                    android:button="@drawable/custom_checkbox"
+                    />
+                <!--android:button="@drawable/custom_checkbox"-->
+
+                <CheckBox
+                    android:id="@+id/address_abroad_checkbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="  বিদেশে"
+                android:button="@drawable/custom_checkbox"
+                android:layout_marginLeft="18dp"
+                    />
+              <!--  android:button="@drawable/custom_checkbox"
+                android:layout_marginLeft="18dp"
+-->
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/abroad_type_status_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="আপনার স্থায়ী/অস্থায়ী*"
+                android:textColor="@color/colorPrimary" />
+
+            <LinearLayout
+                android:id="@+id/abroad_type_layout"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="0dp"
+                android:background="@color/white"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/abroad_type_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:text="abroad type"
+                    android:textSize="18dp" />
+
+                <ImageView
+                    android:id="@+id/down_arrow_merital"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/down_arrow" />
+
+            </LinearLayout>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="আপনার বর্তমান ঠিকানা*"
                 android:textColor="@color/colorPrimary" />
 
             <EditText
@@ -156,11 +238,18 @@
             </LinearLayout>
 
             <CheckBox
+                android:id="@+id/permanent_address_checkbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="এটাই স্থায়ী ঠিকানা"/>
+                android:text="এটাই স্থায়ী ঠিকানা" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="আপনার স্থায়ী ঠিকানা*"
+                android:textColor="@color/colorPrimary" />
 
             <EditText
                 android:id="@+id/permanent_address_editext"
@@ -212,10 +301,19 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:gravity="center"
-                android:text="(আপনার অনুমতি ছাড়া ঠিকানা প্রকাশ করা হবে না)"
-                android:textSize="16sp"
                 android:padding="@dimen/small_padding"
-                />
+                android:text="(আপনার অনুমতি ছাড়া ঠিকানা প্রকাশ করা হবে না)"
+                android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/next"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_margin="10dp"
+                android:background="@color/colorPrimary"
+                android:text="পরবর্তী ধাপ"
+                android:textColor="@color/white"
+                android:textSize="24sp" />
 
         </LinearLayout>
 
