Add validation of Address information

--- a/app/src/main/res/layout/activity_registration_user_address_information.xml
+++ b/app/src/main/res/layout/activity_registration_user_address_information.xml
@@ -242,6 +242,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:checked="false"
                 android:text="এটাই স্থায়ী ঠিকানা" />
 
             <TextView
