--- a/app/src/main/res/layout/activity_registration_first.xml
+++ b/app/src/main/res/layout/activity_registration_first.xml
@@ -185,14 +185,14 @@
             <Button
                 android:id="@+id/register_button"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_below="@id/date_Of_birth_editext"
                 android:layout_margin="10dp"
                 android:layout_weight=".8"
                 android:background="@color/colorPrimary"
                 android:text="রেজিস্ট্রেশন করুন"
                 android:textColor="@color/white"
-                android:textSize="24sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/or"
@@ -209,11 +209,12 @@
             <Button
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:paddingLeft="15dp"
                 android:text="ফেসবুক দিয়ে রেজিস্ট্রেশন করুন"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="15sp"/>
 
             <TextView
                 android:layout_width="match_parent"
